# SPROS

./: .gitignore  README.md
MQTTClient/: CMakeLists.txt  main.cpp
MQTTClient/helper/: Helper.h
MQTTClient/message/: GNSSMessage.h  Message.h  RotationMessage.h  SpeedMessage.h
WebSocketTest/: CMakeLists.txt  MessageTypeConst.h  NetworkController.cpp  NetworkController.h  droneId.txt  main.cpp  tempId.txt
WebSocketTest/controller/: DroneNetwork.cpp  DroneNetwork.h  NetCallback.h  NetworkResponder.h
WebSocketTest/helper/: Helper.h  MessageTypeConst.h
WebSocketTest/model/: DroneInfo.cpp  DroneInfo.h  Model.h  Ping.h  Position.cpp  Position.h  StartSession.h
WebSocketTest/model/acknowledgement/: ActionFinished.h  PingAck.h  Position.h
WebSocketTest/model/receivedFromServer/: Registration.h  StopSession.h
WebSocketTest/model/request/: StartSessionAck.h
WebSocketTest/model/response/: ShowUpAck.h  StartAction.h
WebSocketTest/model/sentByDrone/: RegistrationAck.h  ShowUp.h  StartSessionAck.h  StopSessionAck.h
WebSocketTest/net/: SocketWrapper.cpp  SocketWrapper.h
WebSocketTest/net/adapter/: DroneInfoAdapter.h  MessageAdapter.h  MessageFactory.h  PingAdapter.h  RegistrationAdapter.h  ShowUpAckAdapter.h  StartActionAdapter.h  StartSessionAdapter.h  StopSessionAdapter.h
WebSocketTest/net/message/: MessageFactory.cpp  MessageFactory.h  RegistrationAdapter.cpp  RegistrationAdapter.h
WebSocketTest/transport/: Message.cpp  Message.h
